hashcash-0.18 - 23-Mar-2002 - Adam Back <adam@cypherspace.org>

	* fix token parsing to allow resource names with :s
	  in them (eg. urls etc)
	* change hashcash_mint API a bit
	* add programming APIs for all other functions except
	  double spend db, and move library code to libhc.c

hashcash-0.17 - 23-Mar-2002 - Adam Back <adam@cypherspace.org>

	* add programming API for hashcash_mint
	* separate hashcash tool program from hashcash library code
	* remove trailing 'Z' option for times -- adds no value

hashcash-0.16 - 15-Mar-2002 - Adam Back <adam@cypherspace.org>

	* minor clean up stuff:
	* allow longer collision strings for compatibility with future
	  versions
	* reject collision strings with non-printable and non ascii
          chars (< ascii(32) and > ascii(127)
	* make install now installs man page
	* fix VMS compile warning
	* fix bad portability assumption about time_t being signed
	* simple VMS scripting build script

hashcash-0.15 - 14-Mar-2002 - Adam Back <adam@cypherspace.org>

	* deal with unix, DOS, and mac lf endings (rather than just unix)
	* fix bug reported by Doc.Cypher <doc_cypher@redneck.gacracker.org>
	* modifications to compile under VC++ 6.0 on win32
	* add -i feature

hashcash-0.14 - 13-Mar-2002 - Adam Back <adam@cypherspace.org>

	* revamped flags and arguments
	* lots of new options and features
	* more safe error reporting (avoid risk of false positives)
	* fix all warnings
	* make compile on machines with 64 bit longs
	* make compile on IRIX
	* make Makefile more portable
	* more reliable timing strategy
	* remove separate endian.c -- put endian stuff in libsha1.c
	* create man page
	* update documentation
	* re-implement SDB simple database to have a more standard
	  interface to facilitate plugging in gdb etc
	* import random number interface to /dev/urandom

hashcash-0.13 - 03-Mar-2002 - Adam Back <adam@cypherspace.org>

 	* fix bug introduced in 0.12
	* update documentation
